--- a/package.json
+++ b/package.json
@@ -18,9 +18,18 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
+    "@eslint/js": "^9.7.0",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "eslint": "^9.7.0",
+    "eslint-plugin-react": "^7.34.4",
+    "globals": "^15.8.0",
+    "typescript-eslint": "^7.16.1"
+  },
+  "overrides": {
+    "eslint": "^9.7.0"
   }
 }
